hadra-build-tool/src/test/resources/net/vpc/hadralang/test/compiler/success/testCompilerSuccess_snippet.hl
def void methodExample(){
    int a,b;
}