hadra-build-tool/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0040.hl
def void main(){
    int x=3;
     {
         float x=3;
     }
}
